Hosted app button name

Follows the pattern used for the Chrome 3-dot app menu.

Bug: 811555
Change-Id: I601a6225a98751657c83dd5d8dcf92b9200fecca
Reviewed-on: https://chromium-review.googlesource.com/920263
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Matt Giuca <mgiuca@chromium.org>
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539655}
Former-commit-id: aa432364df013ac6393017c52dde963fb2e1fd4e